@@ -1,2 +1,6 @@
+[B]+ 1.0.1[/B] ~ (07-09-2017)
+- Added substitute argument for users that do not enter pastebin's &amp; debian's raw addresses
+- Added option for disabling youtube's setup wizard
+
 [B]+ 1.0.0[/B] ~ (04-09-2017)
 - Initial Version
